core/roboconf-core/src/test/resources/configurations/invalid/instanceof-missing-opening-cb.instances
instance of
	name: server1;
}